// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fact and figures 1 col renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly when centerd 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1 ecl-fact-figures--centered"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly whit large icons 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xl ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 1 col renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-1 custom-class custom-class--test"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 2 cols renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-2"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#spreadsheet"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Sed hendrerit
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 3 cols renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-3"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#spreadsheet"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Sed hendrerit
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#growth"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Donec suscipit interdum augue, ac dapibus eros finibus a.
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#digital"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Aenean dapibus
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#regulation"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#image"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Sed hendrerit
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`Fact and figures 4 cols renders correctly 1`] = `
<jest>
  <div
    class="ecl-fact-figures ecl-fact-figures--col-4"
  >
    <div
      class="ecl-fact-figures__items"
    >
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#infographic"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc eu est nec orci rhoncus venenatis. Donec rutrum lacus eget lobortis eleifend. Duis cursus sapien ac felis bibendum, in sagittis turpis porttitor. Aliquam sed mauris et orci efficitur mollis. Donec eu dolor in turpis sollicitudin malesuada.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#spreadsheet"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Sed hendrerit
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#growth"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Donec suscipit interdum augue, ac dapibus eros finibus a.
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#digital"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Aenean dapibus
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#regulation"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Lorem ipsum
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Nunc condimentum sapien ut nibh finibus suscipit vitae at justo. Morbi quis odio faucibus, commodo tortor id, elementum libero.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#image"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Sed hendrerit
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Turpis varius congue venenatis, erat dui feugiat felis.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#global"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Donec suscipit interdum augue, ac dapibus eros finibus a.
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Cras vestibulum efficitur mi, quis porta tellus rutrum ut. Quisque at pulvinar sem.
        </div>
      </div>
      <div
        class="ecl-fact-figures__item"
      >
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--l ecl-fact-figures__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#presentation"
          />
        </svg>
        <div
          class="ecl-fact-figures__value"
        >
          00.0 million
        </div>
        <div
          class="ecl-fact-figures__title"
        >
          Aenean dapibus
        </div>
        <div
          class="ecl-fact-figures__description"
        >
          Aliquam lacinia diam eu sem malesuada, in interdum ante bibendum.
        </div>
      </div>
    </div>
    <div
      class="ecl-fact-figures__view-all"
    >
      <a
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-fact-figures__view-all-link"
        href="/example"
      >
        <span
          class="ecl-link__label"
        >
          View all
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--xs ecl-icon--flip-horizontal ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#arrow-left"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;
